<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapIntegrationApp</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">Menu</string>
    <string name="menu_map_button">Play</string>
    <string name="main_collection_button">Collection</string>
    <string name="title_activity_map">Game Map</string>
    <string name="no_fused">The fused location provider is not available</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="default_text">default text</string>
    <string name="research">Research</string>
    <string name="research_button">Research</string>
    <string name="dismiss_button">Close</string>
    <string name="research_completed">Research completed!!</string>
    <string name="research_in_progress">Research In progress</string>
    <string name="msg_far_away">This is too far away!!</string>
    <string name="msg_research_in_progress">"Research in progress: "</string>
    <string name="msg_research_completed">Research Completed!!</string>
    <string name="msg_get_closer">Get closer to claim your reward.</string>
    <string name="msg_already_researching">You are already researching a lot of places!!</string>

</resources>
