<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/place_research_popup"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal|center">

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/research"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal|center">

                <Button
                    android:id="@+id/research"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/research_button" />

                <Button
                    android:id="@+id/dismiss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dismiss_button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>